set(CMAKE_CXX_STANDARD 20)
add_executable(1931a 1931a.cpp)
add_executable(1929a 1929a.cpp)
add_executable(1912l 1912l.cpp)
add_executable(1883b 1883b.cpp)
add_executable(1945b 1945b.cpp)
add_executable(1941a 1941a.cpp)
add_executable(1948a 1948a.cpp)
add_executable(1944a 1944a.cpp)
add_executable(1823b 1823b.cpp)
add_executable(1954a 1954a.cpp)
add_executable(1955b 1955b.cpp)